[gd_scene load_steps=8 format=3 uid="uid://gu3ck2n063pp"]

[ext_resource type="Texture2D" uid="uid://dk1kerf8rp1vw" path="res://assets/Background.png" id="1_ho1j5"]
[ext_resource type="Script" uid="uid://slo2p2ve88so" path="res://scripts/end_game.gd" id="1_t0qxb"]
[ext_resource type="Texture2D" uid="uid://k60b7mpnl7pw" path="res://assets/Corner.png" id="2_w2lcc"]
[ext_resource type="Texture2D" uid="uid://diixlb0omic6u" path="res://assets/Wall.png" id="3_4hd24"]
[ext_resource type="PackedScene" uid="uid://bc4dfk8a4t51b" path="res://scenes/game_summary.tscn" id="4_t0qxb"]
[ext_resource type="PackedScene" uid="uid://fpsdfujpr5sx" path="res://scenes/controls/play_control_key.tscn" id="5_4hd24"]
[ext_resource type="PackedScene" uid="uid://cqh4be70g6bi3" path="res://scenes/controls/restart_control_key.tscn" id="6_t0qxb"]

[node name="EndGame" type="Node2D"]
script = ExtResource("1_t0qxb")

[node name="Checkerboard" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture_repeat = 2
position = Vector2(1225, 407)
scale = Vector2(2.25143, 2.25143)
texture = ExtResource("1_ho1j5")
region_enabled = true
region_rect = Rect2(0, 0, 1200, 700)

[node name="Corners" type="Node2D" parent="."]
visible = false

[node name="Corner" type="Sprite2D" parent="Corners"]
texture_filter = 1
position = Vector2(48, 48)
rotation = 3.14159
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_w2lcc")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Corner2" type="Sprite2D" parent="Corners"]
texture_filter = 1
position = Vector2(48, 600)
rotation = 3.14159
scale = Vector2(1.5, -1.5)
texture = ExtResource("2_w2lcc")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Corner3" type="Sprite2D" parent="Corners"]
texture_filter = 1
position = Vector2(1104, 600)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_w2lcc")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Corner4" type="Sprite2D" parent="Corners"]
texture_filter = 1
position = Vector2(1104, 48)
scale = Vector2(1.5, -1.5)
texture = ExtResource("2_w2lcc")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Walls" type="Node2D" parent="."]
visible = false

[node name="Wall" type="Sprite2D" parent="Walls"]
texture_filter = 1
position = Vector2(576, -3.8147e-06)
rotation = 3.14159
scale = Vector2(15, 1.5)
texture = ExtResource("3_4hd24")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Wall2" type="Sprite2D" parent="Walls"]
texture_filter = 1
position = Vector2(576.158, 648)
rotation = 3.14159
scale = Vector2(-15.0001, -1.5)
texture = ExtResource("3_4hd24")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Wall3" type="Sprite2D" parent="Walls"]
texture_filter = 1
position = Vector2(1.19209e-07, 324.008)
rotation = -1.5708
scale = Vector2(7.12524, -1.5)
texture = ExtResource("3_4hd24")
region_rect = Rect2(0, 0, 1200, 700)

[node name="Wall4" type="Sprite2D" parent="Walls"]
texture_filter = 1
position = Vector2(1152, 324)
rotation = -1.5708
scale = Vector2(-7.125, 1.5)
texture = ExtResource("3_4hd24")
region_rect = Rect2(0, 0, 1200, 700)

[node name="GameSummary" parent="." instance=ExtResource("4_t0qxb")]
position = Vector2(532, 99)
use_editor_as_start = true
offset_vector = Vector2(0, 550)
on_screen_in_editor = true
should_start_off_screen = true

[node name="PlayControlKey" parent="." instance=ExtResource("5_4hd24")]
position = Vector2(284, 343)
use_editor_as_start = true
offset_vector = Vector2(0, 400)
on_screen_in_editor = true
should_start_off_screen = true

[node name="RestartControlKey" parent="." instance=ExtResource("6_t0qxb")]
position = Vector2(403, 342)
use_editor_as_start = true
offset_vector = Vector2(0, 400)
on_screen_in_editor = true
should_start_off_screen = true
